--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ body {
   padding: 2em;
   font-size: 1.25em;
   height: 100%;
+  background: black;
 }
 
 .wrapper {
@@ -114,22 +115,27 @@ body {
   justify-content: space-between;
   align-items: center;
   font-weight: 700;
+  height: 100%;
+  
 }
 
 .div-1, .div-2, .div-3 {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
-  color: #fff;
+  color: aquamarine;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
-  height: 300px;
+  font-size: 1em;
+  height: 500px;
   width: 30%;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-indent: 1.5em;
 }
 
-
+.div-1, .div-2 {
+    border-right: 1px white solid;
+    padding-right: 20px
+}
 
 
 /* ==========================================================================
